crates/keron-lang/tests/corpus/errors/check/nullable_arithmetic.keron
val a: Int? = 1

val b: Int? = 2

val c = a + b
